--- a/general_website/locale/de/LC_MESSAGES/django.po
+++ b/general_website/locale/de/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-26 11:57+0100\n"
+"POT-Creation-Date: 2022-11-27 00:06+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -68,7 +68,7 @@ msgstr "Erzeugung läuft"
 msgid "Deleting ALL instances"
 msgstr "Löschen ALLER Instanzen"
 
-#: .\compute_api\views.py:876
+#: .\compute_api\views.py:886
 #, python-format
 msgid "%(count)s standard chart simulations were added to the queue. Chill!"
 msgstr ""
@@ -873,12 +873,24 @@ msgstr "Unbekannter Fehler"
 msgid "Become a Patron"
 msgstr "Werde Patron"
 
-#: .\general_website\templates\general_website\faq.html:112
+#: .\general_website\templates\general_website\faq.html:121
 #: .\general_website\templates\general_website\privacy_policy.html:26
 msgid "Google Analytics"
 msgstr ""
 
-#: .\general_website\templates\general_website\faq.html:114
+#: .\general_website\templates\general_website\faq.html:123
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "            bloodmallet.com would like to use <a\n"
+#| "                href=\"https://support.google.com/analytics/"
+#| "answer/2763052\">anonymized</a> <a\n"
+#| "                href=\"https://marketingplatform.google.com/about/"
+#| "analytics/\">Google Analytics (GA)</a>, to know how many\n"
+#| "            people are using the website. You can either accept or reject "
+#| "this. Your choice will be saved on your device\n"
+#| "            in a cookie.\n"
+#| "            "
 msgid ""
 "\n"
 "            bloodmallet.com would like to use <a\n"
@@ -887,8 +899,11 @@ msgid ""
 "                href=\"https://marketingplatform.google.com/about/analytics/"
 "\">Google Analytics (GA)</a>, to know how many\n"
 "            people are using the website. You can either accept or reject "
-"this. Your choice will be saved on your device\n"
-"            in a cookie.\n"
+"this. Accepting will enable google analytics\n"
+"            for your visit and as long as your choice persists. Your choice "
+"will be saved on your device\n"
+"            in a cookie. You can always return here to enable or disable "
+"google analytics.\n"
 "            "
 msgstr ""
 "\n"
@@ -899,13 +914,13 @@ msgstr ""
 "entweder zugestimmt oder widersprochen werden. Die getroffene Wahl wird in "
 "einem Cookie auf dem Gerät gespeichert."
 
-#: .\general_website\templates\general_website\faq.html:124
+#: .\general_website\templates\general_website\faq.html:134
 #: .\general_website\templates\general_website\layout\base.html:78
 #: .\general_website\templates\general_website\privacy_policy.html:33
 msgid "Accept GA tracking"
 msgstr "GA akzeptieren"
 
-#: .\general_website\templates\general_website\faq.html:127
+#: .\general_website\templates\general_website\faq.html:137
 #: .\general_website\templates\general_website\layout\base.html:81
 #: .\general_website\templates\general_website\privacy_policy.html:34
 msgid "Reject GA tracking"
